# backstock

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BACKTESTING_ACCURACY.md  BROKER_INTEGRATION.md  CONTRIBUTING.md  DATA_PROVIDERS.md  DESIGN.md  MCP_INTEGRATION.md  PRD.md  README.md  ROADMAP.md  SECURITY.md  STRATEGY_DSL.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: app.py  database.py  middleware.py  models.py  schemas.py
apps/web/: biome.json  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: api-health-check.tsx  (+4 more)
apps/worker/: main.py
docs/: RISK_DISCLAIMER.md  assumptions.md  current-state.md  validation-report.md
docs/adr/: 0001-product-scope.md  0002-event-driven-engine.md  0003-market-data-snapshots.md  0004-strategy-dsl.md  0005-order-safety.md  0006-monorepo-runtime.md
docs/guides/: developer-guide.md  operations-runbook.md  user-guide.md
docs/reference/: api.md  data-model.md  external-data-notes.md  metrics.md  sample-strategy.json  test-plan.md
infra/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
migrations/: env.py
migrations/versions/: 20260716_0001_initial.py  20260716_0002_market_data_instruments.py
prompts/: 00_GLOBAL_RULES.md  01_REPOSITORY_AUDIT.md  02_BOOTSTRAP_AND_ARCHITECTURE.md  03_MARKET_DATA_PROVIDERS.md  04_DATA_QUALITY_AND_SNAPSHOTS.md  05_BACKTEST_ENGINE_CORE.md  06_STRATEGY_DSL_AND_INDICATORS.md  07_RISK_AND_ORDER_SIMULATION.md  08_BACKEND_API_AND_JOBS.md  09_FRONTEND_MVP.md  10_ANALYTICS_AND_COMPARISON.md  11_PAPER_BROKER_AND_APPROVAL.md  12_KIS_OPENAPI_ADAPTER.md  13_MCP_INTEGRATION.md  14_FINAL_AUDIT_AND_HANDOFF.md
tests/api/: test_health.py
tests/architecture/: test_dependencies.py
tests/market_data/: test_domain.py  test_finance_datareader_provider.py  test_local_provider.py  test_persistence.py  test_storage_and_retry.py  test_symbols.py  test_yfinance_provider.py
(+14 files in other folders)
