[project]
name = "backstock"
version = "0.1.0"
description = "Reproducible stock strategy research and paper-trading platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.116,<1",
    "orjson>=3.11,<4",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31,<2",
    "httpx2>=1,<3",
    "mypy>=1.17,<2",
    "pytest>=8.4,<9",
    "pytest-cov>=6.2,<7",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages"]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.12"
pythonPlatform = "All"
venvPath = "."
venv = ".venv"
include = ["apps", "packages", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["apps", "packages", "tests"]
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "packages", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D100", "D101", "D102", "D103", "D104", "D203", "D213", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "PLR2004", "S101"]
"migrations/**/*.py" = ["D", "INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["apps", "packages"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["apps", "packages"]
